test/fails/bad_tags/mult6.lgl
tag a is vec2;
tag b is vec3;
tag c is b;
tag d is b;

b y = [2., 1., 2.];

b->c b_c = [[1., 1., 1.], [1., 1., 1.], [1., 1., 1.]];
b->d b_d = [[1., -1., 1.], [-1., 1., 1.], [1., 1., -1.]];

c fail = (b_c + b_d) * y; // No downcast